fix directory name

--- a/hosts.yml
+++ b/hosts.yml
@@ -5,5 +5,5 @@ local:
     ansible_connection: local
     user_home: '{{ lookup("env","HOME") }}'
     user_config: '{{ user_home }}/.config'
-    dotfiles_directory: '{{ user_home }}/dots'
+    dotfiles_directory: '{{ user_home }}/dotfiles'
     dotfiles_roles: '{{ dotfiles_directory }}/roles'
