--- a/.gitignore
+++ b/.gitignore
@@ -9,7 +9,7 @@ roles/atom/files/atom/*
 *.retry
 
 roles/sublime/files/sublime-text-3/*
-!roles/sublime/files/sublime-text-3/Packages/User/
+!roles/sublime/files/sublime-text-3/Packages/User/Preferences.sublime-settings
 
 roles/copyq/files/copyq/*
 !roles/copyq/files/copyq/copyq.conf
