--- a/.gitignore
+++ b/.gitignore
@@ -8,7 +8,7 @@ roles/atom/files/atom/*
 
 *.retry
 
-roles/sublime/files/sublime-text-3/*
+# roles/sublime/files/sublime-text-3/*
 !roles/sublime/files/sublime-text-3/Packages/User/Preferences.sublime-settings
 
 roles/copyq/files/copyq/*
