--- a/roles/nvm/defaults/main.yml
+++ b/roles/nvm/defaults/main.yml
@@ -2,3 +2,6 @@
 git_repository:
   - repo: 'git://github.com/creationix/nvm.git'
     dest: '{{ user_home }}/.nvm'
+install_package:
+  - build-essential
+  - libssl-dev
