--- a/roles/atom/tasks/main.yml
+++ b/roles/atom/tasks/main.yml
@@ -4,3 +4,8 @@
     'apm install --packages-file {{ role_path }}/files/atom/packages.list'
 
 # apm list --installed --bare | grep '^[^@]\+' -o > packages.list
+
+- name: add Emmet settings
+  copy:
+    src: '{{ dotfiles_roles }}/atom/files/emmet'
+    dest: '{{ user_home }}'
