--- a/roles/copyq/defaults/main.yml
+++ b/roles/copyq/defaults/main.yml
@@ -1,6 +1,6 @@
 ---
 add_repository_sourceline: 'ppa:hluk/copyq'
-install_package: 'copyq'
+add_package_name: 'copyq'
 link:
   src: '{{ dotfiles_roles }}/copyq/files/copyq'
   dest: '{{ user_config }}/copyq'
