--- a/roles/keepassxc/defaults/main.yml
+++ b/roles/keepassxc/defaults/main.yml
@@ -1,6 +1,6 @@
 ---
 add_repository_sourceline: 'ppa:phoerious/keepassxc'
-install_package: 'keepassxc'
+add_package_name: 'keepassxc'
 keepassxc:
   base: 'psst.kdbx'
   dest: '{{ user_config }}/keepassxc'
