--- a/roles/mega/defaults/main.yml
+++ b/roles/mega/defaults/main.yml
@@ -1,7 +1,7 @@
 ---
 add_key_filename: 'https://mega.co.nz/linux/MEGAsync/xUbuntu_16.04//Release.key'
 add_repository_sourceline: 'deb https://mega.nz/linux/MEGAsync/xUbuntu_16.04/ ./'
-install_package: 'megasync'
+add_package_name: 'megasync'
 startup_item:
   - name: 'megasync'
     delay: 60
