--- a/roles/sublime/defaults/main.yml
+++ b/roles/sublime/defaults/main.yml
@@ -1,7 +1,7 @@
 ---
 add_key_filename: 'https://download.sublimetext.com/sublimehq-pub.gpg'
 add_repository_sourceline: 'deb https://download.sublimetext.com/ apt/stable/'
-install_package: 'sublime-text'
+add_package_name: 'sublime-text'
 link:
   src: '{{ dotfiles_roles }}/sublime/files/sublime-text-3'
   dest: '{{ user_config }}/sublime-text-3'
