rename vars and tasks name

--- a/playbook.yml
+++ b/playbook.yml
@@ -1,21 +1,21 @@
 ---
 - hosts: local
 
-
   pre_tasks:
     - name: upgrade system
       become: yes
       shell: apt-get update && apt-get upgrade -y
-
 
   roles:
     - global_config
     - add_key
     - add_repository
     - add_package
+    - add_git_repository
+    - add_link
+    - add_gitignore
+    - add_startup
     - disable_update
-    - git_repositories
-    - link
     - zsh
     - git
     - nvm
@@ -25,9 +25,6 @@
     - mega
     - keepassxc
     - shutter
-    - gitignore
-    - startup
-
 
   post_tasks:
     - name: remove useless packages from the cache and remove packages that no longer needed
@@ -36,7 +33,6 @@
         force_apt_get: yes
         autoremove: yes
         autoclean: yes
-
 
     - name: reboot system
       become: yes
