--- a/roles/add_git_repository/tasks/main.yml
+++ b/roles/add_git_repository/tasks/main.yml
@@ -1,19 +1,17 @@
 ---
-- name: create git_repository list
+- name: create repository list
   set_fact:
-    git_repository_list: '{{
+    add_git_repository_list: '{{
       hostvars.localhost
-      | json_query("*.git_repository")
+      | json_query("*.add_git_repository")
       | list
     }}'
-
 
 - name: check existing directory
   stat:
     path: '{{ item.dest }}'
   register: dir
-  with_items: '{{ git_repository_list }}'
-
+  with_items: '{{ add_git_repository_list }}'
 
 - name: delete existing directory
   file:
@@ -23,9 +21,8 @@
   when: item.stat.exists and item.stat.isdir
   with_items: '{{ dir.results }}'
 
-
-- name: clone git repositories
+- name: clone repositories
   git:
     repo: '{{ item.repo }}'
     dest: '{{ item.dest }}'
-  with_items: '{{ git_repository_list }}'
+  with_items: '{{ add_git_repository_list }}'
