--- a/roles/add_gitignore/tasks/main.yml
+++ b/roles/add_gitignore/tasks/main.yml
@@ -5,22 +5,19 @@
     state: directory
     force: yes
 
-
 - name: create gitignore list
   set_fact:
-    gitignore_list: '{{
+    add_gitignore_list: '{{
       hostvars.localhost
-      | json_query("*.gitignore")
+      | json_query("*.add_gitignore")
       | list
     }}'
-
 
 - name: create template files
   template:
     src: ignore.j2
     dest: '{{ tmp }}/{{ item.0 }}'
-  with_indexed_items: '{{ gitignore_list }}'
-
+  with_indexed_items: '{{ add_gitignore_list }}'
 
 - name: assemble all files
   assemble:
