--- a/roles/add_link/tasks/main.yml
+++ b/roles/add_link/tasks/main.yml
@@ -1,19 +1,17 @@
 ---
-- name: create link list
+- name: create list
   set_fact:
-    link_list: '{{
+    add_link_list: '{{
       hostvars.localhost
-      | json_query("*.link")
+      | json_query("*.add_link")
       | list
     }}'
-
 
 - name: check existing directory
   stat:
     path: '{{ item.dest }}'
   register: dir
-  with_items: '{{ link_list }}'
-
+  with_items: '{{ add_link_list }}'
 
 - name: delete existing directory
   file:
@@ -23,11 +21,10 @@
   when: item.stat.exists and item.stat.isdir
   with_items: '{{ dir.results }}'
 
-
 - name: link directory
   file:
     src: '{{ item.src }}'
     dest: '{{ item.dest }}'
     force: yes
     state: link
-  with_items: '{{ link_list }}'
+  with_items: '{{ add_link_list }}'
