--- a/roles/copyq/defaults/main.yml
+++ b/roles/copyq/defaults/main.yml
@@ -1,14 +1,14 @@
 ---
 add_repository_sourceline: 'ppa:hluk/copyq'
 add_package_name: 'copyq'
-link:
+add_link:
   src: '{{ dotfiles_roles }}/copyq/files/copyq'
   dest: '{{ user_config }}/copyq'
-gitignore:
+add_gitignore:
   ignore:
     - 'roles/copyq/files/copyq/*'
   excluded:
     - '!roles/copyq/files/copyq/copyq.conf'
-startup_item:
+add_startup:
   - name: 'copyq'
     delay: 40
