--- a/roles/sublime/defaults/main.yml
+++ b/roles/sublime/defaults/main.yml
@@ -2,10 +2,10 @@
 add_key_filename: 'https://download.sublimetext.com/sublimehq-pub.gpg'
 add_repository_sourceline: 'deb https://download.sublimetext.com/ apt/stable/'
 add_package_name: 'sublime-text'
-link:
+add_link:
   src: '{{ dotfiles_roles }}/sublime/files/sublime-text-3'
   dest: '{{ user_config }}/sublime-text-3'
-gitignore:
+add_gitignore:
   ignore:
     - 'roles/sublime/files/sublime-text-3/*'
   excluded:
