--- a/roles/zsh/defaults/main.yml
+++ b/roles/zsh/defaults/main.yml
@@ -1,7 +1,7 @@
 ---
-rc: '.zshrc'
+# rc: '.zshrc'
 add_package_name: 'zsh'
-git_repository:
+add_git_repository:
   - repo: 'git://github.com/robbyrussell/oh-my-zsh.git'
     dest: '{{ user_home }}/.oh-my-zsh'
   - repo: 'git://github.com/zsh-users/zsh-autosuggestions.git'
