--- a/hosts.yml
+++ b/hosts.yml
@@ -7,3 +7,4 @@ local:
     user_config: '{{ user_home }}/.config'
     dotfiles_directory: '{{ user_home }}/dotfiles'
     dotfiles_roles: '{{ dotfiles_directory }}/roles'
+    git_protocol: 'git@github.com:in-in/dotfiles.git'
