--- a/roles/git/defaults/main.yml
+++ b/roles/git/defaults/main.yml
@@ -7,7 +7,7 @@ git_config_data:
   - name: user.name
     value: '{{ git_user_name }}'
   - name: remote.origin.url
-    value: 'git@github.com:in-in/dotfiles.git'
+    value: '{{ git_protocol }}'
     scope: local
     repo: '{{ dotfiles_directory }}'
 
