--- a/roles/utility/defaults/main.yml
+++ b/roles/utility/defaults/main.yml
@@ -13,6 +13,7 @@ add_package_name:
   - dconf-editor
   - fonts-hack-ttf
   - glances
+  - gnome-shell-extension-dash-to-panel
   - gnome-tweaks
   - synaptic
   - tree
