--- a/roles/gsettings/tasks/main.yml
+++ b/roles/gsettings/tasks/main.yml
@@ -54,5 +54,6 @@
     gsettings set org.gnome.nautilus.list-view default-zoom-level 'small'
     gsettings set org.gnome.nautilus.list-view use-tree-view true
     gsettings set org.gnome.nautilus.preferences default-folder-viewer 'list-view'
+    gsettings set org.gnome.nautilus.preferences recursive-search 'never'
     gsettings set org.gnome.nautilus.preferences show-create-link true
     gsettings set org.gnome.nautilus.preferences show-hidden-files true
