--- a/roles/atom/defaults/main.yml
+++ b/roles/atom/defaults/main.yml
@@ -1,10 +1,14 @@
 ---
 add_key_filename: 'https://packagecloud.io/AtomEditor/atom/gpgkey'
+
 add_repository_sourceline: 'deb [arch=amd64] https://packagecloud.io/AtomEditor/atom/any/ any main'
+
 add_package_name: 'atom'
+
 add_link:
   src: '{{ dotfiles_roles }}/atom/files/atom'
   dest: '{{ user_home }}/.atom'
+
 add_gitignore:
   ignore:
     - 'roles/atom/files/atom/*'
@@ -13,3 +17,9 @@ add_gitignore:
     - '!roles/atom/files/atom/keymap.json'
     - '!roles/atom/files/atom/packages.list'
     - '!roles/atom/files/atom/styles.less'
+
+utility_copy:
+  dir: '{{ user_home }}/emmet'
+  paths:
+    - src: '{{ dotfiles_roles }}/atom/files/emmet'
+      dest: '{{ user_home }}'
