--- a/roles/utility/defaults/main.yml
+++ b/roles/utility/defaults/main.yml
@@ -7,6 +7,7 @@ utility_task_list:
   - add_package_name
   - add_repository_sourceline
   - add_startup
+  - utility_copy
 
 add_package_name:
   - curl
