--- a/roles/git/defaults/main.yml
+++ b/roles/git/defaults/main.yml
@@ -1,6 +1,6 @@
 ---
-add_repository_sourceline: 'ppa:git-core/ppa'
-add_package_name: 'git'
+utility_repository: 'ppa:git-core/ppa'
+utility_package: 'git'
 git_config_data:
   - name: user.email
     value: '{{ git_user_email }}'
