--- a/roles/nvm/defaults/main.yml
+++ b/roles/nvm/defaults/main.yml
@@ -1,7 +1,7 @@
 ---
-add_git_repository:
+utility_git_repository:
   - repo: 'git://github.com/creationix/nvm.git'
     dest: '{{ user_home }}/.nvm'
-add_package_name:
+utility_package:
   - build-essential
   - libssl-dev
