--- a/roles/sublime/defaults/main.yml
+++ b/roles/sublime/defaults/main.yml
@@ -1,11 +1,11 @@
 ---
-add_key_filename: 'https://download.sublimetext.com/sublimehq-pub.gpg'
-add_repository_sourceline: 'deb https://download.sublimetext.com/ apt/stable/'
-add_package_name: 'sublime-text'
-add_link:
+utility_key: 'https://download.sublimetext.com/sublimehq-pub.gpg'
+utility_repository: 'deb https://download.sublimetext.com/ apt/stable/'
+utility_package: 'sublime-text'
+utility_link:
   src: '{{ dotfiles_roles }}/sublime/files/sublime-text-3'
   dest: '{{ user_config }}/sublime-text-3'
-add_gitignore:
+utility_gitignore:
   ignore:
     - 'roles/sublime/files/sublime-text-3/*'
   excluded:
