--- a/roles/zsh/defaults/main.yml
+++ b/roles/zsh/defaults/main.yml
@@ -1,6 +1,6 @@
 ---
-add_package_name: 'zsh'
-add_git_repository:
+utility_package: 'zsh'
+utility_git_repository:
   - repo: 'git://github.com/robbyrussell/oh-my-zsh.git'
     dest: '{{ user_home }}/.oh-my-zsh'
   - repo: 'git://github.com/zsh-users/zsh-autosuggestions.git'
