--- a/roles/emacs/defaults/main.yml
+++ b/roles/emacs/defaults/main.yml
@@ -1,5 +1,6 @@
 ---
-utility_repository: 'ppa:kelleyk/emacs'
+utility_repository:
+  - repo: 'ppa:kelleyk/emacs'
 utility_package: 'emacs25'
 utility_link:
   src: '{{ dotfiles_roles }}/emacs/files/emacs.d'
