--- a/roles/copyq/defaults/main.yml
+++ b/roles/copyq/defaults/main.yml
@@ -1,5 +1,6 @@
 ---
-utility_repository: 'ppa:hluk/copyq'
+utility_repository:
+  - repo: 'ppa:hluk/copyq'
 utility_package: 'copyq'
 utility_link:
   src: '{{ dotfiles_roles }}/copyq/files/copyq'
