--- a/roles/keepassxc/defaults/main.yml
+++ b/roles/keepassxc/defaults/main.yml
@@ -1,5 +1,6 @@
 ---
-utility_repository: 'ppa:phoerious/keepassxc'
+utility_repository:
+  - repo: 'ppa:phoerious/keepassxc'
 utility_package: 'keepassxc'
 keepassxc:
   base: 'psst.kdbx'
