--- a/roles/sublime/defaults/main.yml
+++ b/roles/sublime/defaults/main.yml
@@ -1,6 +1,7 @@
 ---
 utility_key: 'https://download.sublimetext.com/sublimehq-pub.gpg'
-utility_repository: 'deb https://download.sublimetext.com/ apt/stable/'
+utility_repository:
+  - repo: 'deb https://download.sublimetext.com/ apt/stable/'
 utility_package: 'sublime-text'
 utility_link:
   src: '{{ dotfiles_roles }}/sublime/files/sublime-text-3'
